--- a/src/style/App.css
+++ b/src/style/App.css
@@ -5,9 +5,12 @@
   justify-content: center;
   width: 100%;
   height: 50%;
+  background-color: blueviolet;
 }
 
 .app-container h1 {
-  color: var(--green);
+  color: pink;
   padding: 1rem;
 }
+
+
