--- a/src/style/index.css
+++ b/src/style/index.css
@@ -20,4 +20,19 @@ body {
   padding: 0;
   height: 100vh;
   width: 100vw;
+  background-image: url("./../assets/bgplaceholder.gif");
+}
+
+.bdy{
+  font-size: 20px;
+  color: azure;
+}
+
+.linkz{
+  color:aqua;
+  font-size: 15px;
+}
+
+.header{
+  color: pink;
 }
