--- a/src/style/App.css
+++ b/src/style/App.css
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 50%;
-  background-color: blueviolet;
+  background-color: black;
 }
 
 .app-container h1 {
